fix mobile navbar spacing

--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -17,8 +17,8 @@
   color: white;
   font-size: 1rem;
   transition: $transition;
-  margin-left: 1.75rem;
-  margin-right: 1.75rem;
+  margin-left: 5vw;
+  margin-right: 5vw;
 
   &:hover {
     color: $lightBlue;
